package G2.Protocol;

option optimize_for = LITE_RUNTIME;

//登录数据
message LoginData {
    //SessionID
    required string sessionId = 1;
    //登录时间
    required int64 loginTime = 2;
    //服务区编号
    required int64 serverId = 3;
    //重连角色编号
    required int64 playerId = 4;
}

//登录消息
message LoginMessage {
    //状态类型
    required LoginStatusType statusType = 1;
    //状态参数
    optional int64 statusValue = 2;
}

//登录状态类型
enum LoginStatusType {
    //成功
    Success = 1;
    //服务关闭
    ServerClosed = 2;
    //登录失败
    LoginFailed = 3;
    //登录失效
    LoginLose = 4;
    //禁用设备
    DinedDevice = 5;
    //角色封禁
    PlayerBaned = 6;
}